<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuscarOpinions">

    <Button
        android:id="@+id/btnNovaOpinio"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:onClick="novaOpinio"
        android:text="@string/novaOpinio"
        style="@style/EstiloBoton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarOpinions" />

    <EditText
        android:id="@+id/editLloc"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        style="@style/TextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmpresa" />

    <TextView
        android:id="@+id/txtLloc"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:text="@string/lloc"
        app:layout_constraintBaseline_toBaselineOf="@+id/editLloc"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="55dp"
        android:text="@string/buscarOpinions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEmpresa"
        android:layout_width="85dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:text="@string/empresa"
        app:layout_constraintBaseline_toBaselineOf="@+id/editEmpresa"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editEmpresa"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        style="@style/TextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnTrobarEmpresa"
        android:layout_width="86dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:onClick="busquedaEmpresa"
        android:text="@string/trobar"
        style="@style/EstiloBoton"
        app:layout_constraintBaseline_toBaselineOf="@+id/editEmpresa"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnBuscarOpinions"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/buscar"
        style="@style/EstiloBoton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLloc" />

</android.support.constraint.ConstraintLayout>